# python-course

./: ruff.toml
01-first-steps/: 02_comments.py  03_variables.py  04_data_types.py  05_strings.py  06_formatted_strings.py  07_string_indexes.py  08_immutability.py  09_convertions.py  10_math_operations.py  11_builtin_funtions.py  12_input.py  13_task.py
02-conditionals/: 01_if_conditional.py  02_elif_conditional.py  03_ternary_operator.py  04_truthy_falsy.py  05_None_type.py  06_logical_operators.py  07_comparison_operators.py  08_membership_operators.py  09_is_equal.py  10_short_circuit.py  11_control_flow.py  12_task.py
03-lists/: 01_lists.py  02_list_slicing.py  03_list_adding.py  04_list_remmoving.py  05_list_search.py  06_list_sort.py  07_list_other.py  08_matrix.py  09_list_unpacking.py  10_task.py
04-dictionaries/: 01_dictionaries.py  02_dict_keys.py  03_dict_search.py  04_dict_remove.py  05_task.py
05-tuples-sets/: 01_tuples.py  02_sets.py  03_sets_methods.py  04_sets_venn_diargrams.py  05_sets_others.py  06_sets_exercise.py  07_convert.py
06-loops/: 01_for_loop.py  02_iterables.py  03_range.py  04_enumerates.py  05_while_loop.py  06_break_continue_pass.py  07_for_vs_while.py  08_for_nested_lists.py  09_for_nested_dict.py  10_loop_exercise.py  11_task.py
07-functions/: 01_functions.py  02_return.py  03_params_vs_args.py  04_default_param_kwarg.py  05_docstring.py  06_scopes.py  07_global_keyword.py  08_nonlocal_keyword.py  09_args_kwargs.py  10_task.py
08_OOP_1/: 01_class.py  02_constructors.py  (+6 more)
12_venv/poetry/: beauty.py  pyproject.toml
(+48 files in other folders)
