[project]
name = "poetry"
version = "0.1.0"
description = "Use of poetry example"
authors = [
    {name = "jumagu",email = "jmgg.gutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
